course/yaml-examples/11-exam-practice-drills/05-pod-multi-container.yaml
# Exam Practice: Multi-Container Pod
# Sidecar pattern with nginx and log-reader containers sharing volume
#
apiVersion: v1
kind: Pod
metadata:
  name: multi-container
spec:
  containers:
  - name: nginx
    image: nginx
  - name: sidecar
    image: busybox
    command: ["sh", "-c", "while true; do echo $(date); sleep 5; done"]
